--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/stack": "^6.3.10",
     "expo": "^47.0.13",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.17.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "~2.12.0",
-    "react-navigation": "^4.4.4"
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-select-dropdown": "^3.3.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
