--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.10",
+    "@react-three/drei": "^9.58.5",
+    "@react-three/fiber": "^8.12.0",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "^47.0.13",
+    "expo-gl": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.17.1",
     "react": "18.1.0",
@@ -24,7 +27,8 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-select-dropdown": "^3.3.0",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "three": "^0.150.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
